Fix logo when below the grid breakpoint
This prevents the logo from "bouncing" when the navbar is collapsed and
you are scrolling on Chrome on Android.  It does fix the logo a little
too far to the left in some cases, but we can work that out later.

--- a/app/less/cm/navbar.less
+++ b/app/less/cm/navbar.less
@@ -14,7 +14,7 @@
     z-index: 2000;
 }
 
-@media (max-width: @screen-phone) {
+@media (max-width: @grid-float-breakpoint) {
     .navbar-brand {
         position: absolute;
         top: 0;
